@@ -1,5 +1,6 @@
-3030-04-28 Luigi Scarso <luigi.scarso@gmail.com>
+2020-04-28 Luigi Scarso <luigi.scarso@gmail.com>
     * less strict lastnode testing (HH) 
+    * some experimental math delimiter code removed (HH)
 
 2020-04-27 Luigi Scarso <luigi.scarso@gmail.com>
     * similar treatment for shiftdown as shiftup in operators (no
